--- a/library.properties
+++ b/library.properties
@@ -5,8 +5,8 @@ maintainer=Grellard Adrien <grellard.adrien@gmail.com>
 sentence=An additional library for ESP8266WebServer.
 paragraph=
 category=Other
-url=https://github.com/AdriLighting
-architectures=avr, esp8266
+url=https://github.com/AdriLighting/adri_espwebserver/
+architectures=esp8266
 includes=adri_espwebserver.h
-depends=ESP8266WebServer
+depends=
 
